[package]
name = "card_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.2.1"
crossbeam-channel = "0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"